# bmk_firmware

./: CMakeLists.txt  README.md  bmk_nrf52833.overlay  bmk_nrf52840.overlay  prj.conf
changelog/: changelog.txt
src/: board.c  board.h  charger.c  charger.h  common.h  config_app.h  display.c  display.h  i2c_devices.c  i2c_devices.h  keyboard.c  keyboard.h  keyboard_sequences.h  keyboard_sequnces.h  led.c  led.h  led_pwm.c  led_pwm.h  led_strip.c  led_strip.h  lis2dh.c  lis2dh.h  lvgl_sample.c  main.c  main.h  matrix_keyboard.c  matrix_keyboard.h  max17048.c  max17048.h  usb_hid_codes.h  version.c  version.h
src/display/: pics.c  vsc_picture.c
src/lis2dh/: lis2dh.c  lis2dh.h
src/max17048/: max17048.c  max17048.h
src/pictures/: altium_picture.c  battery_picture.c  ble_picture.c  gta_picture.c  logo_picture.c  plug_picture.c  vsc_picture.c
todo/: todo.txt
